<resources>
    <string name="app_name">The Guardian</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="doubleClick">Please click back again to exit.</string>

    <string name="show_more">Next page</string>

    <string name="menu_item_1">Home</string>
    <string name="menu_item_2">Greece</string>
    <string name="menu_item_3">world</string>
    <string name="menu_item_4">sport</string>
    <string name="menu_item_6">culture</string>
    <string name="menu_item_7">business</string>
    <string name="menu_item_9">fashion</string>
    <string name="menu_item_10">environment</string>
    <string name="menu_item_11">technology</string>
    <string name="menu_item_12">travel</string>
    <string name="menu_item_13">science</string>
    <string name="menu_item_14">education</string>
    <string name="noNews">No News to Show or Bad Request</string>

</resources>
