<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuItem_1"
            android:title="@string/menu_item_1" />
        <item
            android:id="@+id/menuItem_2"
            android:title="@string/menu_item_2" />
        <item
            android:id="@+id/menuItem_3"
            android:title="@string/menu_item_3" />
        <item
            android:id="@+id/menuItem_4"
            android:title="@string/menu_item_4" />
        <item
            android:id="@+id/menuItem_6"
            android:title="@string/menu_item_6" />
        <item
            android:id="@+id/menuItem_7"
            android:title="@string/menu_item_7" />
        <item
            android:id="@+id/menuItem_9"
            android:title="@string/menu_item_9" />
        <item
            android:id="@+id/menuItem_10"
            android:title="@string/menu_item_10" />
        <item
            android:id="@+id/menuItem_11"
            android:title="@string/menu_item_11" />
        <item
            android:id="@+id/menuItem_12"
            android:title="@string/menu_item_12" />
        <item
            android:id="@+id/menuItem_13"
            android:title="@string/menu_item_13" />
        <item
            android:id="@+id/menuItem_14"
            android:title="@string/menu_item_14" />
    </group>

</menu>
